--- a/style.css
+++ b/style.css
@@ -1,3 +1,37 @@
-body {
-    background-color: aqua;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/*----- style header part----- */
+.top-section {
+    background-color: rgb(127, 56, 56);
+
+}
+
+.card {
+    background: #161616;
+    width: 1100px;
+    height: 370px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 90px;
+    margin-left: 90px;
+    border-radius: 20px;
+}
+
+.text {
+    color: white;
+    height: 100%;
+    width: 50%;
+}
+
+.player-img {
+    color: rgb(235, 218, 218);
+    height: 100%;
+    width: 50%;
+    margin-top: 40px;
+
 }
