--- a/style.css
+++ b/style.css
@@ -4,6 +4,14 @@
     box-sizing: border-box;
 }
 
+/* font style */
+body {
+    font-family: 'Poppins',
+        sans-serif;
+
+}
+
+
 /*----- style header part----- */
 .top-section {
     background-color: rgb(127, 56, 56);
@@ -26,6 +34,28 @@
     color: white;
     height: 100%;
     width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-start;
+}
+
+.title-part {
+    margin-left: 60px;
+}
+
+.big-title {
+    font-size: 40px;
+}
+
+.small-title {
+    font-size: small;
+}
+
+#button {
+    height: 56px;
+    width: 187px;
+    background: #DD0000;
 }
 
 .player-img {
@@ -33,5 +63,6 @@
     height: 100%;
     width: 50%;
     margin-top: 40px;
+    margin-left: 110px;
 
 }
