--- a/style.css
+++ b/style.css
@@ -66,3 +66,49 @@ body {
     margin-left: 110px;
 
 }
+
+/* .........mider part..... */
+
+.mid-section {
+    background-color: darkgray;
+    height: 900px;
+}
+
+.container {
+    display: flex;
+    margin-top: 100px;
+}
+
+.part-one {
+    width: 25%;
+    background: #161616;
+    height: 310px;
+    width: 310px;
+}
+
+.item {
+    background-color: aliceblue;
+    width: 250px;
+    height: 60px;
+    margin-top: 30px;
+    margin-left: 20px;
+    font-size: larger;
+}
+
+.part-two {
+    width: 70%;
+}
+
+.small-card {
+    border: 2px solid rebeccapurple;
+    height: 360px;
+    width: 315px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    margin-left: 15px;
+}
+
+.pic {}
+
+.text {}
