--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 
 .card {
     background: #161616;
-    width: 1100px;
+    width: 85vw;
     height: 370px;
     display: flex;
     justify-content: center;
@@ -72,12 +72,13 @@ body {
 .mid-section {
     background-color: white;
     height: 1250px;
+    width: 90vw;
 }
 
 .container {
     display: flex;
     margin-top: 100px;
-    width: 800px;
+    width: 60vw;
 
 
 }
@@ -100,7 +101,7 @@ body {
 }
 
 .part-two {
-    width: 70%;
+    width: 70vw;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 7px;
@@ -109,7 +110,7 @@ body {
 .small-card {
     border: 2px solid rgb(242, 237, 247);
     height: 360px;
-    width: 315px;
+    width: 22vw;
     display: flex;
     justify-content: space-evenly;
     align-items: flex-start;
@@ -180,5 +181,14 @@ hr {
     color: rgb(254, 254, 254);
     /* height: 5px;
     width: 5px; */
-
 }
+
+/* .......................
+/* responsive part 
+...................... */
+
+/* -------------
+tab view
+ ............. */
+
+@media screen and (max-width: 768px) {}
