--- a/style.css
+++ b/style.css
@@ -70,15 +70,15 @@ body {
 /* .........mider part..... */
 
 .mid-section {
-    background-color: white;
+    background-color: rgb(245, 239, 239);
     height: 1250px;
-    width: 90vw;
+    width: 50vw;
 }
 
 .container {
     display: flex;
     margin-top: 100px;
-    width: 60vw;
+    width: 30vw;
 
 
 }
@@ -101,16 +101,16 @@ body {
 }
 
 .part-two {
-    width: 70vw;
+    width: 22vw;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: .5%;
+    grid-gap: 0.5%;
 }
 
 .small-card {
     border: 2px solid rgb(242, 237, 247);
     height: 360px;
-    width: 22vw;
+    width: 23vw;
     display: flex;
     justify-content: space-evenly;
     align-items: flex-start;
@@ -193,6 +193,10 @@ tab view
  ............. */
 
 @media screen and (max-width: 868px) {
+    .card {
+        height: 500px;
+    }
+
     .container {
         flex-direction: column;
         height: 2800px;
@@ -216,6 +220,28 @@ tab view
 
 /* ....mobile view ... */
 @media screen and (max-width: 480px) {
+    .top-section {
+        height: 700px;
+    }
+
+    .card {
+        flex-direction: column;
+        width: 90vw;
+        height: 850px;
+        margin-top: 0px;
+        margin-left: 20px;
+    }
+
+    .title-part {}
+
+    .big-title {
+        font-size: 30px;
+    }
+
+    .small-title {
+        font-size: x-small;
+    }
+
     .container {
         flex-direction: column;
     }
